# personal-wiki-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  __init__.py  agent.py  config.py  docker-compose.yml  feishu_channel.py  feishu_client.py  indexer.py  pyproject.toml  retrieval.py  schemas.py
.github/workflows/: ci.yml
channel/: __init__.py  dispatcher.py
channel/feishu/: __init__.py  feishu_channel.py  feishu_client.py  group_memory.py  streaming.py
channel/weixin/: __init__.py  weixin_api.py  weixin_channel.py  weixin_message.py
conversation_history/: feishu:oc_167a3536b3f5388e4c49835a0f9f0dca.md
docs/: observability.md  pr-observability-log.md  session-handoff-2026-04-09.md
docs/优化任务计划文档/: 01-agent-rag-eval-regression.md  01-临时交接-2026-05-14.md  02-hybrid-retrieval-rerank-citation.md  03-typed-state-machine-controller.md  04-reliable-knowledge-deposit-pipeline.md  05-agent-trace-badcase-observability.md  06-backend-jobs-api-boundaries.md
examples/: query_understand_demo.py
multimodal_rag_agent/: __init__.py  config.py  models.py
multimodal_rag_agent/api/: app.py  routes_assets.py  routes_deposit.py  routes_ingest.py  routes_query.py
multimodal_rag_agent/deposit_pipeline/: __init__.py  adapters.py  feishu_writer.py  models.py  pipeline.py
multimodal_rag_agent/docreader_service/: __init__.py  client.py  schemas.py
multimodal_rag_agent/eval/: __init__.py  badcase.py  compare.py  dataset.py  metrics.py  models.py  report.py  runner.py
multimodal_rag_agent/image_resolver/: __init__.py  (+2 more)
observability/: __init__.py  context.py  deepagents_middleware.py  events.py  logging.py
protocols/: __init__.py  controller_models.py  renderers.py  streaming.py  tool_models.py
scripts/: export_eval_badcases.py  replay_eval_dataset.py  verify_xhs_deposit.py
tests/: test_agent_history_sanitization.py  test_agent_protocols.py  test_agent_streaming.py  test_channel_concurrency.py  test_channel_observability.py  test_controller_input_prompts.py  test_deposit_pipeline.py  test_docreader_service.py  test_eval_badcase.py  test_eval_badcase_cli.py  test_eval_compare.py  test_eval_dataset.py  test_eval_metrics.py  test_eval_replay_cli.py  test_eval_report.py  test_eval_runner.py  test_feishu_channel_streaming.py  test_feishu_group_memory.py  test_feishu_streaming.py  test_feishu_wiki_rag_agent.py  test_message_dispatcher.py  test_observability_logging.py  test_protocol_models.py  test_protocol_renderers.py  test_qdrant_index.py  test_streaming_protocol.py
(+27 files in other folders)
