[project]
name = "feishu-wiki-rag-agent"
version = "0.1.0"
description = "Standalone Deep Agents example for Feishu Wiki RAG over websocket"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.3.5",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "langsmith>=0.3.0",
    "langchain-openai>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langchain-chroma>=1.0.0",
    "lark-oapi>=1.4.18",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["feishu_wiki_rag_agent"]

[tool.setuptools.package-dir]
feishu_wiki_rag_agent = "."

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
